kubernetes Service & Deployment Demo Project/Deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nodejsapp
  labels:
    app: nodejsapp
spec:
  replicas: 2
  selector:
    matchLabels:
      app: nodejsapp
  template:
    metadata:
      labels:
        app: nodejsapp
    spec:
      containers:
      - name: nodejsapp
        image: sanyam40/nodejsapp:v1
        ports:
        - containerPort: 3000
