kubernetes Service & Deployment Demo Project/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nodejsapp-service
spec:
  type: NodePort
  selector:
    app.kubernetes.io/name: nodejsapp
  ports:
    - port: 80
      targetPort: 3000
      nodePort: 30007
